[package]
name = "pubmed-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
entrez-rs = "0.1.4"
env_logger = "0.10.0"
log = "0.4.20"
quick-xml = "0.31.0"
xml-rs = "0.8.19"
