[package]
name = "pubmed-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
entrez-rs = "0.1.4"
env_logger = "0.10.0"
log = "0.4.20"
rayon = "1.8.0"
regex = "1.10.2"
roxmltree = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
